; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent_dss.c_extent_dss_prec_set.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent_dss.c_extent_dss_prec_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@have_dss = common dso_local global i32 0, align 4
@dss_prec_disabled = common dso_local global i64 0, align 8
@dss_prec_default = common dso_local global i32 0, align 4
@ATOMIC_RELEASE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @extent_dss_prec_set(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32, i32* @have_dss, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %11, label %6

6:                                                ; preds = %1
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* @dss_prec_disabled, align 8
  %9 = icmp ne i64 %7, %8
  %10 = zext i1 %9 to i32
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i64, i64* %3, align 8
  %13 = trunc i64 %12 to i32
  %14 = load i32, i32* @ATOMIC_RELEASE, align 4
  %15 = call i32 @atomic_store_u(i32* @dss_prec_default, i32 %13, i32 %14)
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %11, %6
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @atomic_store_u(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
